# crossmapy

./: .gitignore  README.md
docs/architecture/: api-stability.md  boundaries.md
python/crossmapy/: README.md  pyproject.toml
python/crossmapy/notebooks/: appendix_reproduction.ipynb
python/crossmapy/scripts/: reproduce_e001.py
python/crossmapy/src/crossmapy/: __init__.py  api.py  ccm.py  simplex.py
python/crossmapy/src/crossmapy/adapters/: __init__.py  python_fallback.py  rust_backend.py
python/crossmapy/src/crossmapy/ccm/: __init__.py  service.py
python/crossmapy/src/crossmapy/simplex/: __init__.py
python/crossmapy/tests/: test_public_api.py  test_reproduce_e001_script.py
rust/ccm-rs/: Cargo.toml
rust/ccm-rs/crates/ccm-rs-py/: Cargo.toml
rust/ccm-rs/crates/ccm-rs-py/src/: lib.rs
rust/ccm-rs/src/: lib.rs
rust/ccm-rs/src/ccm/: mod.rs
rust/ccm-rs/src/core/: error.rs  types.rs
rust/ccm-rs/src/simplex/: mod.rs
rust/ccm-rs/tests/: kernels_smoke.rs
